--- a/stile.css
+++ b/stile.css
@@ -2,6 +2,10 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: "Lora", serif;
+    font-optical-sizing: auto;
+    font-weight: <weight>;
+    font-style: normal;
 }
 
 header{
@@ -14,4 +18,48 @@ header img{
     width: 20vw;
     margin-top: 5vh;
     margin-left: 1vw;
+}
+
+.titolo{
+    margin: 0.5vw;
+    width: 95vw;
+}
+
+.titolo h1{
+    font-size: 400%;
+}
+
+.autor{
+    font-size: 200%;
+    font-weight:600 ;
+    color: rgb(123, 123, 123);
+}
+
+p span{
+    color: rgb(22, 185, 249);
+}
+
+.date{
+    font-size: 130%;
+    font-weight: 500;
+    color: rgb(123, 123, 123);
+}
+
+.foto{
+}
+
+.FOTOTIm img{
+    height: 67vh;
+    /* display: inline-block; */
+    /* height: 100%; */
+    /* width: 100%; */
+}
+
+.FOTOTIm{
+    width: 95vw;
+}
+
+caption{
+    font-weight: 400;
+    color: aqua;
 }
