--- a/stile.css
+++ b/stile.css
@@ -83,3 +83,49 @@ ul{
     font-weight: 500;
     margin-left: 1vw;
 }
+
+.lefttop, .midtop{
+    color: white;
+    display: inline-block;
+    width: 24%;
+}
+
+.righttop{
+    color: white;
+    display: inline-block;
+    width: 37%;
+}
+
+
+.left{
+    border: 2px solid black;
+    margin: auto;
+    padding: 1em;
+    display: inline-block;
+    width: 24%;
+}
+
+.mid{
+    border: 2px solid black;
+    margin: auto;
+    padding: 1em;
+    display: inline-block;
+    width: 24%;
+}
+
+
+.right{
+    border: 2px solid black;
+    display: inline-block;
+    width: 37%;
+}
+
+.th{
+    background-color: rgb(0, 198, 248) ;
+}
+
+.blue{
+    text-align: bottom;
+    padding: 0em;
+    background-color: aquamarine;
+}
