--- a/stile.css
+++ b/stile.css
@@ -24,7 +24,6 @@ header img{
 }
 
 .titolo{
-    /* margin: 0.5vw; */
     width: 95vw;
 }
 
@@ -57,9 +56,7 @@ p span{
 
 .FOTOTIm img{
     height: 67vh;
-    /* display: inline-block; */
-    /* height: 100%; */
-    /* width: 100%; */
+
 }
 
 .FOTOTIm{
@@ -68,7 +65,7 @@ p span{
 
 .caption{
     font-weight: 600;
-    /* color: rgb(255, 0, 0); */
+
 }
 
 .loremp{
@@ -134,15 +131,17 @@ h2{
     color: grey;
 }
 
-.img{
+footer div{
     position: relative;
-    display: block;
     margin-top: 1vh;
 }
 
 footer span{
-    color: red;
+    color: white;
+    font-weight: 500;
+    font-size: 30px;
     position: absolute;
-    top: 10px
+    top: 10px;
+    left: 15px;
 
 }
